<resources>
    <string name="app_name">AP-Eye</string>
    <string name="Camera">Check Plant</string>
    <string name="Community">Community</string>
    <string name="library">Library</string>
    <string name="enter_your_password">Password</string>
    <string name="enter_your_email"> Email</string>
    <string name="login">LOGIN</string>
    <string name="or">or</string>
    <string name="need_new_account">Need new Account ?</string>
    <string name="community">Community</string>
    <string name="welcome_to">Welcome To</string>
    <string name="Search_com">Search</string>
    <string name="acc_settings">Account Settings</string>
    <string name="logout_com">Logout</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="Save">Save</string>
    <string name="apeye">AP-Eye</string>
    <string name="user">User</string>
    <string name="Post">Post</string>
    <string name="write_description">Write Description…</string>
    <string name="guest">Guest</string>
    <string name="signup">SIGNUP</string>
    <string name="user_info">User Information</string>
    <string name="ask_community">ASK COMMUNITY</string>
    <string name="add_photo">Add image</string>
    <string name="skip">SKIP</string>
    <string name="comments">COMMENTS</string>
    <string name="no_comments">No Comments</string>
    <string name="userName">User Name</string>
    <string name="postImage">image of the post</string>
    <string name="analysis">Analysis</string>
    <string name="time">date</string>
    <string name="plantType">Plant</string>
    <string name="signIn">Sign in</string>
    <string name="chooseTime">Choose Time</string>
    <string name="choosePlant">Choose Plant</string>

</resources>

